[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-llm-client"
version = "0.1.0"
description = "Small mTLS LLM API client for notebook experiments"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
]

[tool.setuptools]
py-modules = ["llm_client"]

